feat: remove api key

--- a/link-shortener/index.html
+++ b/link-shortener/index.html
@@ -13,12 +13,8 @@
 <body>
     <div class="container">
         <div class="search-wrapper">
-            <input type="text" id="link-inp"
+            <input type="text" id="inp"
             placeholder="Enter your link to shorten">
-            <br>
-            <input type="text" id="name-inp"
-            placeholder="Enter name (it will be used for /{name})">
-            <br>
             <button id="search-btn">Search</button>
         </div>
         <div id="result"></div>
