feat: add files

--- a/link-shortener/index.html
+++ b/link-shortener/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="search-wrapper">
-            <input type="text" id="inp"
+            <input type="text" id="search-inp"
             placeholder="Enter your link to shorten">
             <button id="search-btn">Search</button>
         </div>
